--- a/qml.qrc
+++ b/qml.qrc
@@ -11,5 +11,6 @@
         <file>ico/64x85/star_down.ico</file>
         <file>ico/64x85/star_up.ico</file>
         <file>ico/64x64/fill_star.ico</file>
+        <file>MyListViewDelegate.qml</file>
     </qresource>
 </RCC>
